<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">City Hunter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_all_cities">All Cities</string>
    <string name="title_activity_city">City</string>
    <string name="app_slogan">The smart city rally</string>
    <string name="all_cities">All Cities</string>
    <string name="current_city">Current City</string>
    <string name="title_activity_mistery">Mystery</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="challenge_description">Challenge description</string>
    <string name="challenge_date_button">Date</string>
    <string name="challenge_cover_picture">This represents the cover picture of the current challenge.</string>
    <string name="city_cover_picture">This represents the cover picture of the current city.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reset_button">Reset</string>
    <string name="reset_description">Resetting will erase all of your saved progess such that all challenges and your score will be reset.</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_slogan">The smart city rally app.</string>
    <string name="about_description">City Hunter is a project developed at the University of Luxembourg for the course of Principles of Software Development.</string>
    <string name="title_authors">Authors</string>
    <string name="author_christof">Christof Ferreira Torres\n(christof.ferreira.001@student.uni.lu)</string>
    <string name="author_angelo">Angelo Migliosi\n(angelo.migliosi.001@student.uni.lu)</string>
    <string name="title_activity_mystery_tab">Mystery</string>
    <string name="score">Score</string>
    <string name="title_activity_help">Help</string>
    <string name="action_help">Help</string>
    <string name="help_description">Be the ultimate city hunter! The goal consists in resolving as many mysteries as possible across many different citites. To solve a given mystery, you must visit several checkpoints across the city and solve challenges. For each successful challenge you increase your score. If you successfully solve each of the challenges, then you are granted a hint which should help you get closer to solve the given mystery. Enough of talking, now go out there and solve some mysteries!</string>

</resources>
