<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lu.uni.cityhunter.activities.AboutActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_slogan"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_authors"
        android:layout_marginTop="30dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_christof"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_angelo"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:layout_weight="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView android:id="@+id/imageView1" 
        android:layout_width="100dp" 
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:src="@drawable/uni_lu_logo" />

</LinearLayout>
