<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context="lu.uni.cityhunter.activities.ChallengeActivity" >

    <ImageView
        android:id="@+id/challengeCoverPicture"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/challenge_cover_picture"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/challengeDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/challengeCoverPicture"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/challenge_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/challengeCoverPicture"
        android:layout_marginTop="20dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/dateButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#45AEFF"
            android:text="@string/challenge_date_button"
            android:textColor="#FFFFFF" 
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/dateButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#45AEFF"
            android:text="@string/challenge_date_button"
            android:textColor="#FFFFFF" 
            android:layout_weight="1"
        
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/dateButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#45AEFF"
            android:text="@string/challenge_date_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/dateButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="#45AEFF"
            android:text="@string/challenge_date_button"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    
</RelativeLayout>